# oceancanvas

./: .env.example  .gitignore  404.html  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  IMPLEMENTATION.md  Makefile  README.md  docker-compose.dev.yml  docker-compose.test.yml  docker-compose.yml  index.html  mkdocs.yml  sitemap.xml
.devcontainer/: devcontainer.json
pipeline/: .gitignore  Dockerfile  README.md  pyproject.toml
pipeline/src/oceancanvas/: __init__.py  __main__.py  arc.py  audio.py  backfill.py  cli.py  constants.py  creative_mapping.py  deploy.py  flow.py  io.py  log.py  moments.py  video.py
pipeline/src/oceancanvas/renderer/: package-lock.json  package.json  render.js  render.mjs
pipeline/src/oceancanvas/schemas/: recipe-schema.json
pipeline/src/oceancanvas/tasks/: __init__.py  argo.py  build_payload.py  discover.py  fetch.py  index.py  obis.py  process.py  render.py
pipeline/tests/: conftest.py
pipeline/tests/fixtures/: create_fixtures.py
pipeline/tests/fixtures/argo/: 2026-01-15.json
pipeline/tests/fixtures/gebco/: gebco_subset.nc
pipeline/tests/fixtures/oisst/: 2026-01-15.nc  2026-01-16.nc  2026-01-17.nc
pipeline/tests/integration/: test_oisst_live.py
pipeline/tests/unit/: test_arc.py  test_argo.py  test_audio.py  test_backfill.py  test_build_payload.py  test_cli.py  test_creative_mapping.py  test_creative_mapping_parity.py  test_determinism.py  test_discover.py  test_fetch.py  test_flow.py  test_index.py  test_io.py  test_log.py  test_moments.py  test_obis.py  test_process.py  test_render.py  test_scaffold.py  test_video.py
(+310 files in other folders)
