[project]
name = "oceancanvas"
version = "0.1.0"
description = "Daily generative ocean art pipeline"
requires-python = ">=3.12"
dependencies = [
    "prefect>=3.0,<4",
    "dlt>=0.5,<1",
    "xarray>=2024.1",
    "netcdf4>=1.6",
    "requests>=2.31",
    "jsonschema>=4.20",
    "sentry-sdk[prefect]>=2.0",  # optional observability — no ADR; disabled unless SENTRY_DSN is set
    "pyyaml>=6.0",
    "numpy>=1.26",
    "pillow>=10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/oceancanvas"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
